--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-element-ts",
   "version": "1.0.1",
   "description": "Very simple DOM generator with types declaration",
-  "main": "dist/index.mjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "files": [
@@ -12,9 +12,9 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "browser": "./dist/index.mjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "browser": "./dist/index.js"
     }
   },
   "scripts": {
