--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dom-plus",
   "version": "2.0.0",
   "description": "Very simple DOM generator with types declaration",
-  "main": "dist/index.cjs",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "module": "dist/index.js",
   "browser": "dist/index.umd.cjs",
-  "types": "dist/index.d.ts",
   "type": "module",
   "files": [
     "dist",
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "npm run clear && vite build",
+    "build": "npm run clear && vite build && tsc",
     "clear": "rimraf dist lib"
   },
   "keywords": [
@@ -42,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/dragon-fish/dom-plus/issues"
   },
-  "homepage": "https://github.com/dragon-fish/dom-plus#readme"
+  "homepage": "https://github.com/dragon-fish/dom-plus#readme",
+  "dependencies": {
+    "tslib": "^2.6.2"
+  }
 }
